--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -7,22 +7,33 @@
 }
 
 .navbar-area {
-  height: 100vh;
+  height: 100%;
   width: 70vw;
-  margin: 0 auto;
-  background-color: pink;
+  margin: 0 auto; /* Horizontally center work area */
+  display: inline-block;
 }
 
 .navbar-list {
-  background-color: #0f0;
-  display: inline;
+  display: inline-flex;
+  float: left; /* Move ul to left side */
   margin: 0px;
-  vertical-align: middle;
+  padding: 0;
+  height: 100%;
 }
 
 .navbar-list-item {
-  display: inline-block;
-  background-color: blue;
-  margin: 0px 25px 0px 25px;
+  display: inline-flex;
+  padding: 0px 30px 0px 30px;
   color: #fff;
+  font-size: 23px;
+  align-items: center; /* Vertically align */
+}
+
+.navbar-list-item:hover {
+  background-color: #d41e29;
+  cursor: pointer;
+}
+
+.navbar-list-item:active {
+  background-color: #ea212d;
 }
