--- a/src/css/menubar.css
+++ b/src/css/menubar.css
@@ -1,6 +1,13 @@
 .menu-bar {
   background-color: #ea212d;
-  height: 15vh;
+  height: 20vh;
   width: 100%;
   min-height: 150px;
+}
+
+.menu-bar-area {
+  height: 100%;
+  width: 70vw;
+  display: inline-block;
+  margin: 0 auto;
 }
