--- a/src/css/menu-header.css
+++ b/src/css/menu-header.css
@@ -1,9 +1,30 @@
 .menu-header {
   width: 23.33vw;
   height: 100%;
-  display: inline-flex;
+  display: inline-block;
+  text-align: center;
+  padding: 50px;
+  box-sizing: border-box;
 }
 
 .menu-header:hover {
   background-color: #d41e29;
+  cursor: pointer;
+}
+
+.main-header-icon {
+  width: 100px;
+  height: 100px;
+  display: block;
+  background-image: url("../images/projects.png");
+  background-size: 100% 100%;
+  margin: 0 auto;
+}
+
+.main-header-title {
+  display: block;
+  color: #fff;
+  font-family: Karla;
+  font-size: 25px;
+  font-weight: bold;
 }
