--- a/src/css/menu-header.css
+++ b/src/css/menu-header.css
@@ -25,9 +25,20 @@
 .main-header-icon {
   width: 100px;
   height: 100px;
-  background-image: url("../images/projects.png");
   background-size: 100% 100%;
   margin: 0 auto;
+}
+
+.icon-about {
+  background-image: url("../images/about.png");
+}
+
+.icon-projects {
+  background-image: url("../images/projects.png");
+}
+
+.icon-resume {
+  background-image: url("../images/resume.png");
 }
 
 .main-header-title {
