--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -16,10 +16,27 @@
 }
 
 .menu-name {
-  display: flex;
+  display: block;
   width: 100%;
   height: 150px;
-  background-color: pink;
+  padding-top: 50px;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-name-text {
+  font-family: Karla;
+  margin-bottom: 0px;
+}
+
+.menu-name-underline {
+  width: 100px;
+  height: 10px;
+  display: inline-flex;
+  background-image: url("../images/menu_name_underline.png");
+  margin-top: 5px;
+  background-size: 100% 100%;
 }
 
 .about-half {
