--- a/src/css/my-skill.css
+++ b/src/css/my-skill.css
@@ -1,15 +1,38 @@
 .skill {
   width: 100%;
   height: 70px;
-  background-color: orange;
+  margin: 5px 0px 5px 0px;
+  background-color: #e8e8e8;
 }
 
 .skill-logo {
   width: 70px;
   height: 70px;
-  background-color: pink;
   box-sizing: border-box;
-  background-position: center center;
-  background-size: cover;
-  background-image: url("../images/warrior-movie.jpg");
+  display: inline-block;
+  vertical-align: bottom; /* Make the sections aligned horizontally */
+}
+
+.skill-logo img {
+  margin-top: 10px;
+}
+
+.skill-data {
+  display: inline-block;
+  width: calc(100% - 70px);
+  height: 70px;
+  vertical-align: bottom; /* Make the sections aligned horizontally */
+  text-align: left;
+  padding: 8px 0px 0px 20px;
+  box-sizing: border-box;
+}
+
+.skill-data .skill-data-title {
+  margin: 0px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.skill-data .skill-data-years {
+  margin: 0px;
 }
