--- a/src/css/menu-resume.css
+++ b/src/css/menu-resume.css
@@ -10,7 +10,7 @@
 
 .download-button {
   border-radius: 4px;
-  background-color: #ea212d;
+  background-color: #353535;
   border: none;
   color: #ffffff;
   text-align: center;
@@ -32,16 +32,18 @@
 
 .resume-full {
   width: 70%;
-  height: 600px; /*calc(100% - 150px);*/
+  height: auto; /*600px; /*calc(100% - 150px);*/
   margin: 40px 0px 40px 0px;
   min-height: 40px;
-  min-width: 300px;
+  min-width: 360px;
   display: inline-block;
   vertical-align: top;
   position: relative;
   box-sizing: border-box;
   background-color: #fff;
   border: 3px solid #e0e0e0;
+  overflow: hidden;
+  padding-bottom: 40px;
 }
 
 .resume-full-title {
@@ -51,7 +53,7 @@
   font-family: Karla;
   width: 100%;
   height: 40px;
-  margin: 0px;
+  margin: 0px 0px 40px 0px;
   font-size: 20px;
   font-weight: bold;
   background-color: #ea212d;
@@ -64,31 +66,56 @@
 }
 
 .myskills-list-section {
-  width: 340px;
+  width: 300px;
   height: auto;
   display: inline-block;
   box-sizing: border-box;
-  padding: 30px;
+  margin: 0px 30px 0px 30px;
   vertical-align: top; /* Override the "baseline" so it aligns the sections by top down */
 }
 
 .work-exp-test-area {
   width: auto;
   height: auto;
-  border: 10px solid orange;
 }
 
 .work-exp-area {
   height: auto;
-  border: 5px solid green;
   width: 100%;
+  border: 3px solid green;
 }
 
 .work-exp-panel {
   width: 350px;
   height: 500px;
   background-color: white;
-  display: inline-flex;
+  display: inline-block;
   margin: 0px 20px 0px 20px;
   vertical-align: top;
+  border: 3px solid #e0e0e0;
+}
+
+.work-exp-panel-image {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.work-exp-panel-image img {
+  height: 140px;
+}
+
+.work-exp-title {
+  width: 100%;
+  height: 40px;
+  background-color: #ea212d;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  box-sizing: border-box;
+  margin: 0px;
 }
