--- a/src/css/menu-resume.css
+++ b/src/css/menu-resume.css
@@ -10,7 +10,7 @@
 
 .download-button {
   border-radius: 4px;
-  background-color: #353535;
+  background-color: #ea212d;
   border: none;
   color: #ffffff;
   text-align: center;
@@ -82,7 +82,6 @@
 .work-exp-area {
   height: auto;
   width: 100%;
-  border: 3px solid green;
 }
 
 .work-exp-panel {
@@ -96,7 +95,6 @@
 }
 
 .work-exp-panel-image {
-  width: 100%;
   height: 200px;
   display: flex;
   justify-content: center;
@@ -118,4 +116,14 @@
   font-weight: bold;
   box-sizing: border-box;
   margin: 0px;
+}
+
+.work-exp-dates {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.work-exp-text {
+  padding: 0px 20px;
+  text-align: left;
 }
