--- a/src/css/menu-resume.css
+++ b/src/css/menu-resume.css
@@ -53,7 +53,7 @@
   font-family: Karla;
   width: 100%;
   height: 40px;
-  margin: 0px 0px 40px 0px;
+  margin: 0px;
   font-size: 20px;
   font-weight: bold;
   background-color: #ea212d;
@@ -70,7 +70,7 @@
   height: auto;
   display: inline-block;
   box-sizing: border-box;
-  margin: 0px 30px 0px 30px;
+  margin: 40px 30px 0px 30px;
   vertical-align: top; /* Override the "baseline" so it aligns the sections by top down */
 }
 
@@ -86,10 +86,10 @@
 
 .work-exp-panel {
   width: 350px;
-  height: 500px;
+  height: 540px;
   background-color: white;
   display: inline-block;
-  margin: 0px 20px 0px 20px;
+  margin: 20px 20px 20px 20px;
   vertical-align: top;
   border: 3px solid #e0e0e0;
 }
@@ -124,6 +124,80 @@
 }
 
 .work-exp-text {
-  padding: 0px 20px;
   text-align: left;
+  margin-left: 20px;
+  background-color: #f6f6f6;
+  width: calc(100% - 40px);
+  padding: 10px;
+  box-sizing: border-box;
 }
+
+.education-full {
+  padding-bottom: 0px;
+}
+
+.education-section {
+  width: calc(100% - 40px);
+  margin: 40px 20px 20px 20px;
+  height: auto;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.education-picture {
+  width: 40%;
+  min-width: 300px;
+  height: auto;
+  display: inline-flex;
+  vertical-align: top;
+  justify-content: center;
+  align-items: center;
+}
+.education-picture img {
+  width: 275px;
+}
+
+.education-info-section {
+  display: inline-flex;
+  vertical-align: top;
+  width: 60%;
+  height: 200px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.education-info {
+  width: 60%;
+  min-width: 400px;
+  height: 60px;
+  background-color: #f6f6f6;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 10px 0px;
+  margin: 5px 0px;
+}
+
+.education-info-text-large {
+  margin: 0px;
+  font-weight: bold;
+}
+
+.education-info-text-small {
+  margin: 0px;
+}
+
+/*
+.myskills-list-section {
+  width: 300px;
+  height: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 0px 30px 0px 30px;
+  vertical-align: top;
+}*/
