--- a/src/css/my-skill.css
+++ b/src/css/my-skill.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 70px;
   margin: 5px 0px 5px 0px;
-  background-color: #e8e8e8;
+  background-color: #f6f6f6;
 }
 
 .skill-logo {
