--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,33 +1,35 @@
 .navbar {
   background-color: #353535;
   width: 100vw;
-  height: 4vh;
+  height: auto;
   margin: 0px;
-  min-height: 50px;
   font-family: Karla;
   font-weight: bold;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
 }
 
 .navbar-area {
-  height: 100%;
+  height: auto;
   width: 70vw;
-  margin: 0 auto; /* Horizontally center work area */
-  display: inline-block;
 }
 
 .navbar-logo-section {
-  width: 200px;
-  height: 100%;
+  width: 50%;
+  height: 50px;
   display: inline-flex;
+  justify-content: center;
+  align-items: center;
   float: left;
+  background-color: orange;
 }
 
 .navbar-logo-icon {
   height: 30px;
   width: 30px;
   position: relative;
-  top: 10px;
-  left: 10px;
+  margin-right: 10px;
   background-image: url("../images/shield.svg");
   background-position: center center;
   background-size: cover;
@@ -36,7 +38,6 @@
 .navbar-logo-text {
   font-family: Reliable;
   font-size: 20px;
-  margin: 13px 0px 0px 20px;
   color: #fff;
 }
 
@@ -45,12 +46,13 @@
   float: right; /* Move ul to left side */
   margin: 0px;
   padding: 0;
-  height: 100%;
+  height: 50px;
+  background-color: pink;
 }
 
 .navbar-list-item {
   display: inline-flex;
-  padding: 0px 30px 0px 30px;
+  padding: 0px 30px;
   color: #fff;
   font-size: 20px;
   align-items: center; /* Vertically align */
@@ -71,7 +73,7 @@
   background-color: #ea212d;
 }
 
-.in-progress-area {
+/*.in-progress-area {
   width: 100%;
   height: 40px;
   background-color: #fff;
@@ -85,3 +87,4 @@
   margin: 12px;
   color: #f00;
 }
+*/
