--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -16,13 +16,21 @@
 }
 
 .navbar-logo-section {
-  width: 50%;
+  width: 200px;
   height: 50px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
   float: left;
-  background-color: orange;
+}
+
+.navbar-logo-section-small {
+  width: 100%;
+  height: 50px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  float: left;
 }
 
 .navbar-logo-icon {
@@ -47,44 +55,50 @@
   margin: 0px;
   padding: 0;
   height: 50px;
-  background-color: pink;
+}
+
+.navbar-list-small {
+  display: inline-flex;
+  float: right; /* Move ul to left side */
+  margin: 0px;
+  padding: 0;
+  height: 50px;
+  width: 100%;
 }
 
 .navbar-list-item {
   display: inline-flex;
-  padding: 0px 30px;
+  width: 200px;
   color: #fff;
   font-size: 20px;
   align-items: center; /* Vertically align */
+  justify-content: center;
+}
+
+.navbar-list-item-small {
+  display: inline-flex;
+  width: 50%;
+  color: #fff;
+  font-size: 20px;
+  align-items: center; /* Vertically align */
+  justify-content: center;
 }
 
 .navbar-list-item a,
-.navbar-list-item a.new:visited {
+.navbar-list-item a.new:visited,
+.navbar-list-item-small a,
+.navbar-list-item-small a:visited {
   color: white;
   text-decoration: none;
 }
 
-.navbar-list-item:hover {
+.navbar-list-item:hover,
+.navbar-list-item-small:hover {
   background-color: #d41e29;
   cursor: pointer;
 }
 
-.navbar-list-item:active {
+.navbar-list-item:active,
+.navbar-list-item-small:active {
   background-color: #ea212d;
 }
-
-/*.in-progress-area {
-  width: 100%;
-  height: 40px;
-  background-color: #fff;
-  display: inline-block;
-  position: absolute;
-  top: 50px;
-  left: 0px;
-}
-
-.in-progress-text {
-  margin: 12px;
-  color: #f00;
-}
-*/
