--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -10,16 +10,85 @@
   height: 45vh;
   min-height: 400px;
   width: 100vw;
-  display: table;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner-title {
   font-family: Reliable;
   margin: 0px;
-  display: table-cell;
   vertical-align: middle;
   color: #fff;
   font-size: 10vh;
   font-weight: normal;
+}
+
+.contact-area {
+  width: 40%;
+  min-width: 250px;
+  height: 60%;
+  min-height: 300px;
+  background-color: white;
+  border: 3px solid #e0e0e0;
+  display: flex;
+  font-family: Karla;
+  flex-direction: column;
+  /*display: none;*/
+}
+
+.contact-title {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-family: Karla;
+  width: 100%;
+  height: 40px;
+  margin: 0px;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #ea212d;
+  color: #fff;
+}
+
+.contact-form {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-label {
+  margin-top: 20px;
+}
+
+.contact-input {
+  width: 30%;
+  min-width: 200px;
+  border: 3px solid #e0e0e0;
+  height: 20px;
+}
+
+.contact-text-area {
+  width: 70%;
+  min-width: 200px;
+  height: 30%;
+  resize: none;
+  border: 3px solid #e0e0e0;
+}
+
+.contact-submit-button {
+  border-radius: 4px;
+  background-color: #ea212d;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 20px;
+  width: 200px;
+  cursor: pointer;
+  margin: 20px 0px;
+  padding: 10px 0px;
 }
