--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -53,7 +53,6 @@
   vertical-align: top;
   position: relative;
   box-sizing: border-box;
-  background-color: pink;
 }
 
 .about-half-info {
@@ -87,6 +86,7 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  flex-direction: column;
   font-family: Karla;
   width: 60%;
   min-width: 275px;
@@ -94,6 +94,17 @@
   margin: 0px;
   padding: 10px;
   box-sizing: border-box;
+}
+
+.social-media-section {
+  width: 275px;
+  height: 50px;
+}
+
+.social-media-icon {
+  width: 50px;
+  height: 50px;
+  padding: 0px 10px;
 }
 
 .about-picture {
