--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -12,7 +12,7 @@
   min-height: 500px;
   min-width: 300px;
   margin: 0 auto; /* Horizontally center work area */
-  padding: 0px;
+  padding: 0px 0px 40px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
