--- a/src/css/calorie-tracker/tr-menu.css
+++ b/src/css/calorie-tracker/tr-menu.css
@@ -1,5 +1,10 @@
 .tr_menu {
   background-color: #ea212d;
+  color: #fff;
   width: 100%;
   height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
