--- a/website/src/css/home-page/home-page.css
+++ b/website/src/css/home-page/home-page.css
@@ -2,3 +2,13 @@
   width: 100vw;
   height: auto;
 }
+
+.hm-section-hdr {
+  /* Section headers on the home-page */
+  margin: 0 0 10px 0;
+}
+
+.hm-section-txt-full {
+  /* Section text on the home page meant to span the entire width of inner main panel items */
+  margin: 0px;
+}
