--- a/website/src/css/home-page/welcome.css
+++ b/website/src/css/home-page/welcome.css
@@ -1,11 +1,11 @@
 .wel {
   display: inline-flex;
   margin: 0 auto;
+  padding: 20px 0px;
 }
 
 .wel-msg {
-  width: 80%;
-  min-height: 150px;
+  width: 100%;
   height: auto;
   flex-direction: column;
   text-align: left;
@@ -13,12 +13,32 @@
 
 .wel-highlights {
   width: 100%;
-  height: 100px;
-  background-color: green;
+  height: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .wel-highlight-item {
-  width: 100px;
-  height: 100px;
-  background-color: white;
+  display: flex;
+  flex-direction: column;
+  width: 220px;
+  height: auto;
+  border: 1px solid grey;
+  margin: 0px 10px;
+  padding: 0px;
+}
+
+.wel-highlight-picture {
+  width: 80%;
+  padding-bottom: 80%;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.wel-highlight-title {
+  margin-top: 10px;
+}
+
+.wel-highlight-txt {
+  margin-top: 5px;
 }
