--- a/website/src/css/home-page/banner.css
+++ b/website/src/css/home-page/banner.css
@@ -12,12 +12,12 @@
   background-position: center;
   background-size: contain;
   border-radius: 50%;
-  border: 5px solid var(--color-1-light-grey);
+  /*  border: 5px solid var(--color-1-light-grey);  */
 }
 
 .ban-img-txt {
   height: auto;
-  margin-top: 10px;
+  margin-top: 0px;
   justify-content: center;
   flex-direction: column;
 }
@@ -35,10 +35,6 @@
 */
 
 @media screen and (max-width: 510px) {
-  .mp-banner {
-    height: 520px;
-  }
-
   .ban {
     width: 80vw;
   }
@@ -58,10 +54,6 @@
 }
 
 @media screen and (max-width: 350px) {
-  .mp-banner {
-    height: 410px;
-  }
-
   .ban-img-txt h1 {
     font-size: 25px;
   }
