--- a/website/src/css/css-global/navbar.css
+++ b/website/src/css/css-global/navbar.css
@@ -1,31 +1,34 @@
 .nb-container {
+  /* Generic navbar container */
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  flex-direction: row;
 }
 
 .nb-logo {
   /* Website logo in the navbar */
-  width: 200px;
-  height: 100%;
+  width: auto;
+  min-width: 185px;
+  height: 75px;
   display: inline-flex;
-  float: left;
 }
 
 .nb-item-list {
   /* List of items in navbar */
   display: inline-flex;
-  float: right;
+  justify-content: center;
   list-style: none;
   padding: 0px;
-  margin: 0px;
-  vertical-align: top;
-  height: 100%;
-  font-weight: bold;
+  margin: 0;
+  height: auto;
 }
 
 .nb-item {
   /* Each item in navbar */
   display: inline-flex;
   align-items: center;
-  height: 100%;
+  height: auto;
   padding: 0px 20px;
 }
 
@@ -34,13 +37,14 @@
 */
 
 @media screen and (max-width: 510px) {
-  .nb-logo {
-    width: 100%;
-    float: none;
+  /* Rearrange navbar so the logo is above the list of links */
+  .nb-container {
+    flex-direction: column;
+    justify-content: center;
   }
 
-  .nb-item-list,
-  .nb-item {
-    display: none;
+  /* Add separation between navbar logo and clickable items */
+  .nb-item-list {
+    margin-bottom: 10px;
   }
 }
