Split apart Welcome.jsx and Highlight.jsx

--- a/website/src/css/css-global/bootstrap-overrides.css
+++ b/website/src/css/css-global/bootstrap-overrides.css
@@ -4,7 +4,7 @@
 
 .ovrd-btn-clear {
   border-color: var(--color-5-dark-blue) !important;
-  color: var(--color-2-white) !important;
+  color: var(--color-5-dark-blue) !important;
 }
 
 .ovrd-btn-clear:hover {
