--- a/website/src/css/home-page/welcome.css
+++ b/website/src/css/home-page/welcome.css
@@ -1,5 +1,5 @@
 .wel-imp {
-  padding: 20px;
+  padding: 40px 20px;
 }
 
 .wel {
@@ -16,103 +16,3 @@
   flex-direction: column;
   text-align: left;
 }
-
-.wel-highlights {
-  /* Container for welcome section  */
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.wel-highlight-item {
-  /* Individual hightlight item */
-  display: inline-flex;
-  flex-direction: column;
-  width: 30%;
-  max-width: 220px;
-  height: auto;
-  margin: 0px 10px;
-  padding: 0px;
-}
-
-.wel-highlight-picture {
-  /* Small picture inside highlight item */
-  width: 60%;
-  padding: 30%;
-  margin: 0 auto;
-  border: 2px solid var(--color-1-light-grey);
-  border-radius: 50%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.resume-pic {
-  /* Picture for the Resume highlight */
-  background-image: url(/home-page/desk-setup-1.jpg);
-}
-
-.projects-pic {
-  /* Picture for the Projects highlight */
-  background-image: url(/home-page/laptop-1.jpg);
-}
-
-.about-me-pic {
-  /* Picture for the About Me section */
-  background-image: url(/home-page/scenery-1.jpg);
-}
-
-.wel-highlight-title {
-  /* Title of highlight item */
-  margin-top: 20px;
-}
-
-.wel-highlight-txt {
-  /* Text inside hightlight item */
-  margin-top: 5px;
-}
-
-.wel-highlight-btn {
-  /* Positional overrides for bootstrap button */
-  align-self: center !important;
-  width: 130px !important;
-  margin: auto 0 0 0 !important;
-}
-
-/*
-    Media queries for changing screen sizes 
-*/
-@media screen and (max-width: 510px) {
-  .wel-highlight-item {
-    /* Adjust spacing of heighlights and widths when the screen gets small */
-    margin: 20px 0px;
-    width: 100%;
-    max-width: 100%;
-  }
-
-  .wel-highlights {
-    /* For small screens, stack highlights vertically */
-    flex-direction: column;
-  }
-
-  .wel-highlight-btm-border::after {
-    /* Pseudo-element to create line between vertically stacked highlight items. */
-    content: "";
-    display: flex;
-    margin: 40px auto 0 auto;
-    width: 85%;
-    height: 0px;
-    border: 1px solid var(--color-5-dark-blue);
-  }
-}
-
-/*
-
-@media screen and (max-width: 510px) {
-  .wel-highlight-item {
-  }
-}
-
-*/
